# math_bubbles

./: CMakeLists.txt  README.md
include/: Game.hpp  MainWindow.hpp  Window.hpp
src/: Game.cpp  MainWindow.cpp  Window.cpp  main.cpp
